css hack to fix firefox spacing on tech list

--- a/css/screen.css
+++ b/css/screen.css
@@ -88,6 +88,12 @@ div#right_column {
   margin-top: -775px;
   z-index: 0;
 	}
+	
+@-moz-document url-prefix() {
+		div#right_column {
+			margin-top: -792px;
+		}
+	}/*hack to fix spacing in Firefox*/
 
 /*Portfolio spacing*/
 .row {
